[workspace]
members = [
    "contracts/escrow-core",
    "contracts/vault-x",
    "contracts/asset-forge",
    "contracts/liquidity-market",
    "contracts/governance-dao",
    "contracts/identity-registry",
    "contracts/risk-oracle",
    "contracts/staking-engine",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
